Fix #99569: Socket type drawing of custom type in view template

Socket type drawing of custom type in view template.

Pull Request: https://projects.blender.org/blender/blender/pulls/109871